Final code review and all necessary documentations
